announcement and trending section into one container; fixed huge gap

--- a/style.css
+++ b/style.css
@@ -212,7 +212,6 @@
     grid-row: 2 / 3;
     display: grid;
     grid-template-columns: 4fr 1fr;
-    grid-template-rows: repeat(auto-fit, 1fr);
     padding: 1.5rem 1rem;
     gap: 2rem;
 }
@@ -221,14 +220,14 @@
     color: #000000;
 }
 
-.main > div > h3 {
+.main > div > h3,
+.main > div > div > h3 {
     font-weight: 500;
     margin-bottom: .75rem;
 }
 
 .main .projects {
     grid-column: 1 / 2;
-    grid-row: 1 / 3;
 }
 
 .main .projects .cards {
@@ -251,7 +250,6 @@
 }
 
 .card-container:hover {
-    /* transform: scale(1.05); */
     filter: drop-shadow(0 0 0.2rem var(--highlights-1));
 }
 
@@ -274,6 +272,12 @@
     cursor: pointer;
 }
 
+.aside {
+    display: grid;
+    align-content: start;
+    gap: 1rem;
+}
+
 .announcement-container {
     display: flex;
     flex-direction: column;
@@ -282,12 +286,6 @@
     box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
     border-radius: .5rem;
     padding: 2rem;
-}
-
-.announcements {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-    /* margin-bottom: 1.5rem; */
 }
 
 .announcement-detail {
